more layout fixes and tweaks, fixed layout bug with iframe tracking... awesome...

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -339,22 +339,25 @@ section article .post_content  h1 {
 display:block;
 font:bold 24px/1.2em Helvetica,Arial,sans-serif;
 margin-bottom:0.5em;
-margin-top:1.4em;
 }
 
 section article .post_content  h2 {
 display:block;
 font:bold 17px/1.2em Helvetica,Arial,sans-serif;
 margin-bottom:0.5em;
-margin-top:1.4em;
 }
 
 section article .post_content  h3 {
 display:block;
 font:bold 15px/1.2em Helvetica,Arial,sans-serif;
 margin-bottom:0.5em;
-margin-top:1.4em;
 }
+
+* + section article .post_content h1,
+* + section article .post_content h2,
+* + section article .post_content h3,
+* + section article .post_content h4 {margin-top:2em;}
+
 
 .post_title a:link, .post_title a:hover, .post_title a:visited, .post_title a:active {color:#333; text-decoration:none;}
 .post_title a:hover {color:black;}
@@ -399,7 +402,7 @@ div.video embed {display:block; margin:0; padding:0;}
 
 section article code {white-space:pre;}
 
-div.code {position:relative; padding-left:40px; margin:0; border:1px solid #e6e5e9; padding:16px 20px 13px 20px; -moz-border-radius:4px; -webkit-border-radius:4px; border-radius:4px; color:#232323;}
+div.code {position:relative; padding-left:40px; margin:0; border:1px solid #e6e5e9; padding:16px 20px 13px 20px; -moz-border-radius:4px; -webkit-border-radius:4px; border-radius:4px; color:#232323; overflow:hidden;}
 .code_block h5 {position:absolute; top:-10px; left:10px; color:#9b0005; background:white; padding:0 10px; font-size:10px; text-transform:uppercase; font-weight:bold; z-index:9999;}
 
 .code_block h5 {color:#999;}
@@ -454,7 +457,7 @@ tr.actionable.in_progress:hover a.simple_button {visibility:visible;}
   padding: 0px;
 }
 
-.CodeRay {margin-bottom:1em;}
+.CodeRay {margin:2em 0;}
 
 .CodeRay .an { color:#E7BE69 }                      /* html attribute */
 .CodeRay .c  { color:#BC9358; font-style: italic; } /* comment */
